# covidstudy

./: .gitignore  README.md  main.py  pyproject.toml
lib/: .covidapi.py.swp  covidapi.py
test/: helloworld.py
