[tool.poetry]
name = "covidstudy"
version = "0.1.0"
description = "Ingestion pipeline of COVID-19 World Survey of University of Maryland"
authors = ["Benoît Carne"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
boto3 = "1.17.21"
pandas = "1.2.3"
pyarrow = "3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
